# standup

./: .gitignore  README.md  preview.html  pyproject.toml
standup/: ai.py  cli.py  config.py  db.py  display.py  predictor.py  todos.py
